lib/GSL/Special/bessel.h

double gsl_sf_bessel_In_scaled(int n,double x);
int gsl_sf_bessel_In_scaled_array(int nmin,int nmax,double x,double* result_array);
int gsl_sf_bessel_K0_e(double x,double* result);
double gsl_sf_bessel_K0(double x);
int gsl_sf_bessel_K1_e(double x,double* result);
double gsl_sf_bessel_K1(double x);
int gsl_sf_bessel_Kn_e(int n,double x,double* result);
double gsl_sf_bessel_Kn(int n,double x);
int gsl_sf_bessel_Kn_array(int nmin,int nmax,double x,double* result_array);
int gsl_sf_bessel_K0_scaled_e(double x,double* result);
double gsl_sf_bessel_K0_scaled(double x);
int gsl_sf_bessel_K1_scaled_e(double x,double* result);
double gsl_sf_bessel_K1_scaled(double x);
int gsl_sf_bessel_Kn_scaled_e(int n,double x,double* result);
double gsl_sf_bessel_Kn_scaled(int n,double x);
int gsl_sf_bessel_Kn_scaled_array(int nmin,int nmax,double x,double* result_array);
int gsl_sf_bessel_j0_e(double x,double* result);
double gsl_sf_bessel_j0(double x);
int gsl_sf_bessel_j1_e(double x,double* result);
double gsl_sf_bessel_j1(double x);
int gsl_sf_bessel_j2_e(double x,double* result);
double gsl_sf_bessel_j2(double x);
int gsl_sf_bessel_jl_e(int l,double x,double* result);
double gsl_sf_bessel_jl(int l,double x);
int gsl_sf_bessel_jl_array(int lmax,double x,double* result_array);
int gsl_sf_bessel_jl_steed_array(int lmax,double x,double* jl_x_array);
int gsl_sf_bessel_y0_e(double x,double* result);
double gsl_sf_bessel_y0(double x);
int gsl_sf_bessel_y1_e(double x,double* result);
double gsl_sf_bessel_y1(double x);